# runtime

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.local-pool  LICENSE  README.md  SECURITY.md  TESTING.md  devsper.toml  docker-compose.yml  memory_utils.py  pyproject.toml
.github/workflows/: docs-deploy.yml  publish-plugin.yml  publish.yml  pypi-publish.yml  release-on-tag.yml  worker-release.yml
benchmarks/: bench_dataset_analysis.py  bench_repository_analysis.py  bench_research_pipeline.py
crates/devsper-bin/: Cargo.toml  README.md
crates/devsper-bin/src/: auth.rs  credentials.rs  eval.rs  main.rs
crates/devsper-bus/: Cargo.toml  README.md
crates/devsper-bus/src/: event_bus.rs  kafka.rs  lib.rs  memory.rs  redis.rs
crates/devsper-cluster/: Cargo.toml  README.md
crates/devsper-cluster/src/: lib.rs  node.rs  peer.rs  protocol.rs  registry.rs
crates/devsper-compiler/: Cargo.toml  README.md
crates/devsper-compiler/src/: compiler.rs  ir.rs  lib.rs  loader.rs
crates/devsper-core/: Cargo.toml  README.md
crates/devsper-core/src/: events.rs  lib.rs  traits.rs  types.rs
crates/devsper-executor/: Cargo.toml  README.md
crates/devsper-executor/src/: executor.rs  hardened_tool.rs  lib.rs  streaming.rs
crates/devsper-graph/: Cargo.toml  README.md
crates/devsper-graph/src/: actor.rs  event_log.rs  lib.rs  mutation.rs  replay.rs  snapshot.rs  validator.rs
crates/devsper-memory/: Cargo.toml  README.md
crates/devsper-memory/src/: index.rs  lib.rs  router.rs  scoped.rs  store.rs  supermemory.rs
crates/devsper-observability/: Cargo.toml
crates/devsper-observability/src/: collector.rs  lib.rs  trace.rs
crates/devsper-plugins/: Cargo.toml  README.md
crates/devsper-plugins/src/: lib.rs  registry.rs  runtime.rs  sandbox.rs  stdlib.rs
crates/devsper-providers/: Cargo.toml  README.md
crates/devsper-providers/src/: anthropic.rs  azure_foundry.rs  azure_openai.rs  github.rs  lib.rs  litellm.rs  lmstudio.rs  mock.rs  ollama.rs  openai.rs  router.rs
crates/devsper-py/: Cargo.toml  build.rs
crates/devsper-py/src/: lib.rs  memory_bridge.rs
crates/devsper-scheduler/: Cargo.toml  README.md
crates/devsper-scheduler/src/: lib.rs
devsper/: README.md  __init__.py  budget.py  debug_events.py  events.py
devsper/agents/: agent.py  critic.py  identity.py  message_bus.py  registry.py  roles.py  run_agent.py
devsper/analytics/: __init__.py  tool_analytics.py
devsper/audit/: __init__.py
devsper/bus/: __init__.py  topics.py
devsper/cache/: __init__.py  embedding_index.py  store.py  task_cache.py
devsper/cli/: __init__.py  export.py  init.py  main.py  run_progress.py
devsper/cluster/: __init__.py  election.py  local.py  registry.py  router.py  state_backend.py
devsper/code_intelligence/: __init__.py  metrics.py  parser.py  security.py
devsper/compiler/: __init__.py  codegen.py  compressor.py  gepa.py  ir.py  objectives.py  parser.py
devsper/compliance/: __init__.py
devsper/config/: __init__.py  config_loader.py  defaults.py  resolver.py  schema.py
devsper/connectors/: __init__.py  base.py  registry.py  sample_connector.py
devsper/contracts/: __init__.py  platform_event_type.py
devsper/core/: __init__.py
devsper/council/: __init__.py  council.py  research_to_code.py
devsper/credentials/: __init__.py  cli.py  migration.py  store.py
devsper/dashboard/: __init__.py  dashboard.py
devsper/dev/: __init__.py  builder.py  debugger.py  repo_index.py
devsper/distributed/: __init__.py  controller.py  worker_runtime.py
devsper/evals/: runner.py  (+4 more)
docs/: README.md  agent-identities.md  architecture.md  budget.md  cli.md  configuration.md  development.md  distributed.md  examples.md  faq.md  getting-started.md  index.md  introduction.md  observability.md  packaging.md  protocol.md  providers.md  release_checklist.md  swarm_runtime.md  testing_v2_router_and_mcp.md  tools.md
examples/: _common.py  _config.py  analyze-repo.devsper  async_example.py  code.devsper  coding_agent.py  demo_swarm.py  general.devsper  langchain_agent.py  langgraph_swarm.py  programmatic.py  quickstart.py  research.devsper
plugins/: code.devsper  filesystem.devsper  git.devsper  http.devsper  search.devsper
python/: README.md  pyproject.toml
python/devsper/: __init__.py  __main__.py  _cli.py  _vektori_bridge.py  cli.py
python/devsper/auth/: github.py
python/devsper/credentials/: inject.py  providers.py  store.py
python/devsper/eval/: runner.py  scoring.py
python/devsper/tui/: __init__.py  app.py
scripts/: README.md  gen_paper.py  install-tool.sh  install.sh  qa_e2e_stabilization.sh  run_e2e_apps.py  seed_tool_scores.py  test_tool_scoring_cli.sh  test_tool_scoring_full.sh  test_tool_scoring_smoke.py  test_v2_router.py
supermemory-core/: Cargo.toml
tests/: test_agent.py  test_analysis.py  test_analytics.py  test_auto_model.py  test_clarification.py  test_clarification_multinode.py  test_code_repl.py  test_config_loader.py  test_credentials.py  test_cross_boundary_serialization.py  test_dag_export.py  test_dev_agents.py  test_dev_build_cmd.py  test_dev_debugger.py  test_dev_repo_index.py  test_dev_sandbox.py  test_dev_scaffold.py  test_distributed_bugs.py  test_embeddings_service.py  test_evals.py  test_event_logger.py  test_execution_graph_meta.py  test_executor.py  test_export_runs.py  test_github_provider.py  test_init.py  test_knowledge_graph.py  test_knowledge_query.py  test_langchain_adapter.py  test_langgraph_adapter.py  test_map_reduce.py  test_memory_evolution.py  test_memory_isolation.py  test_missions.py  test_model_router.py  test_planner.py  test_platform_runtime_events.py  test_plugins.py  test_protocols.py  test_reg.py  (+19 more)
website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
worker/: Cargo.toml  Dockerfile  README.md
worker/src/: budget.rs  bus.rs  clarification.rs  config.rs  election.rs  error.rs  executor.rs  health.rs  lib.rs  main.rs  registry.rs  rpc.rs  snapshot.rs  telemetry.rs  worker_node.rs
worker/src/types/: agent.rs  event.rs  mod.rs  task.rs
(+651 files in other folders)
