[workspace]
members = [
    "crates/devsper-core",
    "crates/devsper-graph",
    "crates/devsper-executor",
    "crates/devsper-scheduler",
    "crates/devsper-bus",
    "crates/devsper-providers",
    "crates/devsper-plugins",
    "crates/devsper-compiler",
    "crates/devsper-cluster",
    "crates/devsper-memory",
    "crates/devsper-observability",
    "crates/devsper-bin",
    "crates/devsper-py",
    "worker",
]
resolver = "2"

[workspace.package]
description  = "Distributed AI Swarm Runtime"

edition      = "2021"
version      = "0.3.0"
rust-version = "1.80"
license      = "GPL-3.0-or-later"
repository   = "https://github.com/devsper-com/runtime"
homepage     = "https://devsper.com"
documentation = "https://docs.devsper.com"
authors      = ["devsper contributors"]
keywords     = ["ai", "agents", "llm", "workflow", "dag"]
categories   = ["asynchronous", "concurrency", "development-tools"]

[workspace.dependencies]
tokio        = { version = "1" }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
anyhow       = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait  = "0.1"
uuid         = { version = "1", features = ["v4"] }
petgraph     = "0.6"
mlua         = { version = "0.10", features = ["lua54", "async"] }
reqwest      = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
rdkafka      = { version = "0.36", features = ["cmake-build", "tokio"] }
redis        = { version = "0.27", features = ["tokio-comp"] }
axum         = "0.7"
clap         = { version = "4", features = ["derive"] }
thiserror    = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
futures      = "0.3"
