[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["devsper"]

[project]
name = "devsper"
version = "2.8.0"
description = "Orchestrate distributed swarms of AI agents that collaboratively solve complex tasks."
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
keywords = ["ai", "agents", "swarm", "llm", "orchestration", "multi-agent", "distributed"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "keyring>=24.0",
    "shtab>=1.6.0",
    "pyfiglet>=1.0",
    "httpx>=0.27.0",
    "textual>=0.50.0",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.4",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.10",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
    "duckduckgo-search>=8.1.1",
]

[project.urls]
Homepage = "https://github.com/devsper-com/runtime"
Documentation = "https://docs.devsper.com"
Changelog = "https://github.com/devsper-com/runtime/blob/main/CHANGELOG.md"
Worker = "https://github.com/devsper-com/runtime/pkgs/container/devsper-worker"

[project.scripts]
devsper = "devsper.cli:main"

[project.optional-dependencies]
server = ["fastapi>=0.110", "uvicorn>=0.29", "sse-starlette>=2.0", "vektori>=0.1.1"]
ollama = []
compliance = ["spacy>=3.7"]
explainability = []
data = ["pandas>=2.0.0", "scikit-learn>=1.3.0"]
document = ["docproc>=2.0.0", "python-docx>=1.0.0"]
research = ["duckduckgo-search>=6.0.0"]
embeddings = ["sentence-transformers>=3.0.0"]
mcp = ["httpx>=0.27", "anyio>=4.0"]
a2a = ["httpx>=0.27", "fastapi>=0.110", "uvicorn>=0.29", "sse-starlette>=2.0"]
hitl = ["httpx>=0.27"]
snowflake = ["snowflake-connector-python>=3.6.0"]
redis-memory = ["redis>=5.0.0", "hiredis>=2.3.0"]
distributed = [
    "redis>=5.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "hiredis>=2.3.0",
]
# TruLens observability (default since 2.6.0).
# trulens-core pins rich<14; we override that constraint via [tool.uv.override-dependencies].
trulens = ["trulens-core>=1.0"]
# Pin LangGraph explicitly for integrators (also pulled in via langchain).
langgraph = ["langgraph>=1.0.0,<2"]
worker = []  # distributed worker is a separate Rust binary (devsper-worker)
# Prompt optimization backends (hot-swappable via prompt_optimizer.provider)
dspy = ["dspy-ai>=2.4"]
gepa = ["gepa>=0.1"]
evals = []  # eval harness has no extra deps — all built-in
openevals = ["openevals>=0.0.6"]
docs = [
    "mkdocs>=1.6.0,<2",
    "mkdocs-material>=9.5.0",
    "mike>=1.1.0",
]

[dependency-groups]
dev = [
    "black>=26.3.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
    "ruff>=0.15.5",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
markers = [
    "live: requires real API keys (deselected by default)",
]

[tool.uv]
# trulens-core pins rich<14; textual (and devsper's TUI) requires rich>=14.
# Override so uv resolves to the version we actually need — rich 14.x is
# backward-compatible with the Console/Table APIs trulens uses.
override-dependencies = ["rich>=14.3.3"]
