[build-system]
requires = ["maturin>=1.7"]
build-backend = "maturin"

[project]
name = "devsper"
version = "3.1.3"
description = "Devsper — self-evolving AI workflow engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
keywords = ["AI", "agents", "workflow", "runtime", "swarm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.scripts]
devsper = "devsper._cli:main"

[tool.maturin]
bindings = "pyo3"
module-name = "devsper._core"
manifest-path = "../crates/devsper-py/Cargo.toml"
strip = true
