[package]
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
name = "devsper-worker"
version = "1.10.0"
edition = "2021"
rust-version = "1.78"
readme = "README.md"

[[bin]]
name = "devsper-worker"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
redis = { version = "0.25", features = ["tokio-comp", "aio", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", features = ["ws", "json", "macros", "form"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio-stream = "0.1"
futures = "0.3"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.24"
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17", features = ["grpc-tonic", "tonic"] }
tracing-opentelemetry = "0.25"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
sha2 = "0.10"
dashmap = "5"
arc-swap = "1"
tokio-util = { version = "0.7", features = ["rt"] }
hostname = "0.3"
regex = "1"
pyo3 = { version = "0.21", features = ["auto-initialize"], optional = true }

[features]
default = ["subprocess-executor"]
subprocess-executor = []
pyo3-executor = ["pyo3"]

[dev-dependencies]
tokio-test = "0.4"
