[package]
name = "devsper-bin"
version.workspace = true
edition.workspace = true

[[bin]]
name = "devsper"
path = "src/main.rs"

[dependencies]
devsper-core = { path = "../devsper-core" }
devsper-graph = { path = "../devsper-graph" }
devsper-executor = { path = "../devsper-executor" }
devsper-scheduler = { path = "../devsper-scheduler" }
devsper-bus = { path = "../devsper-bus" }
devsper-providers = { path = "../devsper-providers" }
devsper-compiler = { path = "../devsper-compiler" }
devsper-cluster = { path = "../devsper-cluster" }
devsper-memory = { path = "../devsper-memory" }
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
