[package]
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
name = "devsper-bin"
readme = "README.md"
version.workspace = true
edition.workspace = true

[[bin]]
name = "devsper"
path = "src/main.rs"

[dependencies]
devsper-core = { path = "../devsper-core", version = "0.3.0" }
devsper-graph = { path = "../devsper-graph", version = "0.3.0" }
devsper-executor = { path = "../devsper-executor", version = "0.3.0" }
devsper-scheduler = { path = "../devsper-scheduler", version = "0.3.0" }
devsper-bus = { path = "../devsper-bus", version = "0.3.0" }
devsper-providers = { path = "../devsper-providers", version = "0.3.0" }
devsper-compiler = { path = "../devsper-compiler", version = "0.3.0" }
devsper-cluster = { path = "../devsper-cluster", version = "0.3.0" }
devsper-memory = { path = "../devsper-memory", version = "0.3.0" }
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
opentelemetry = { version = "0.24", features = ["trace"] }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17", features = ["http-proto", "reqwest-client"] }
opentelemetry-semantic-conventions = { version = "0.16" }
tracing-opentelemetry = "0.25"
keyring = "3"
rpassword = "7"
reqwest = { workspace = true }
