[package]
name = "devsper-bus"
version = "0.1.0"
edition = "2021"

[dependencies]
devsper-core = { path = "../devsper-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }

[dependencies.redis]
workspace = true
optional = true

[features]
redis = ["dep:redis"]
