[package]
name = "devsper-bus"
version.workspace = true
edition.workspace = true

[dependencies]
devsper-core = { path = "../devsper-core" }
tokio = { workspace = true, features = ["sync", "macros", "rt"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }

[dependencies.redis]
workspace = true
optional = true

[features]
redis = ["dep:redis"]
