[package]
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
name = "devsper-bus"
readme = "README.md"
version.workspace = true
edition.workspace = true

[dependencies]
devsper-core = { path = "../devsper-core", version = "0.1.0" }
tokio = { workspace = true, features = ["sync", "macros", "rt"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }

[dependencies.redis]
workspace = true
optional = true

[features]
redis = ["dep:redis"]
