[package]
name = "devsper-cluster"
version.workspace = true
edition.workspace = true

[dependencies]
devsper-core = { path = "../devsper-core" }
devsper-bus = { path = "../devsper-bus" }
devsper-graph = { path = "../devsper-graph" }
tokio = { workspace = true, features = ["sync", "macros", "rt"] }
async-trait = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
