[package]
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
name = "devsper-cluster"
readme = "README.md"
version.workspace = true
edition.workspace = true

[dependencies]
devsper-core = { path = "../devsper-core", version = "0.3.0" }
devsper-bus = { path = "../devsper-bus", version = "0.3.0" }
devsper-graph = { path = "../devsper-graph", version = "0.3.0" }
tokio = { workspace = true, features = ["sync", "macros", "rt"] }
async-trait = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
