[package]
name = "devsper-compiler"
version.workspace = true
edition.workspace = true

[features]
default = ["lua-vendored"]
lua-vendored = ["mlua/vendored", "devsper-plugins/lua-vendored"]

[dependencies]
devsper-core = { path = "../devsper-core" }
devsper-plugins = { path = "../devsper-plugins" }
mlua = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
