[package]
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
name = "devsper-compiler"
readme = "README.md"
version.workspace = true
edition.workspace = true

[features]
default = ["lua-vendored"]
lua-vendored = ["mlua/vendored", "devsper-plugins/lua-vendored"]

[dependencies]
devsper-core = { path = "../devsper-core", version = "0.1.0" }
devsper-plugins = { path = "../devsper-plugins", version = "0.1.0" }
mlua = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
