[package]
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
name = "devsper-executor"
readme = "README.md"
version.workspace = true
edition.workspace = true

[dependencies]
devsper-core = { path = "../devsper-core", version = "0.2.0" }
devsper-graph = { path = "../devsper-graph", version = "0.2.0" }
devsper-scheduler = { path = "../devsper-scheduler", version = "0.2.0" }
tokio = { workspace = true, features = ["sync", "macros", "rt", "time"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
