[package]
name = "devsper-graph"
version = "0.1.0"
edition = "2021"

[dependencies]
devsper-core = { path = "../devsper-core" }
petgraph = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
