[package]
name = "devsper-graph"
version.workspace = true
edition.workspace = true

[dependencies]
devsper-core = { path = "../devsper-core" }
petgraph = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "rt"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
