[package]
name = "devsper-memory"
version = "0.1.0"
edition = "2021"

[dependencies]
devsper-core = { path = "../devsper-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
