[package]
name = "devsper-observability"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
devsper-core = { path = "../devsper-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "macros", "rt-multi-thread"] }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
