[package]
name = "devsper-plugins"
version = "0.1.0"
edition = "2021"

[dependencies]
devsper-core = { path = "../devsper-core" }
mlua = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
