[package]
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
name = "devsper-plugins"
readme = "README.md"
version.workspace = true
edition.workspace = true

[features]
default = ["lua-vendored"]
lua-vendored = ["mlua/vendored"]

[dependencies]
devsper-core = { path = "../devsper-core", version = "0.2.0" }
mlua = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "rt", "fs"] }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
