[package]
name = "devsper-py"
version.workspace = true
edition.workspace = true
description = "PyO3 Python extension module exposing the devsper Rust runtime"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
devsper-core = { path = "../devsper-core", version = "0.2.0" }
devsper-compiler = { path = "../devsper-compiler", version = "0.2.0" }
devsper-executor = { path = "../devsper-executor", version = "0.2.0" }
devsper-graph = { path = "../devsper-graph", version = "0.2.0" }
devsper-scheduler = { path = "../devsper-scheduler", version = "0.2.0" }
devsper-providers = { path = "../devsper-providers", version = "0.2.0" }
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py39"] }
pyo3-async-runtimes = { version = "0.21", features = ["tokio-runtime"] }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
serde_json = { workspace = true }
