[package]
name = "devsper-scheduler"
version.workspace = true
edition.workspace = true

[dependencies]
devsper-core = { path = "../devsper-core" }
devsper-graph = { path = "../devsper-graph" }
tokio = { workspace = true, features = ["sync", "macros", "rt"] }
anyhow = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
